--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "babel": "^6.5.1",
     "history": "^2.0.0-rc2",
-    "react": "^15.0.0-rc.1",
+    "react": "^0.14.7",
     "react-addons-css-transition-group": "^0.15.0-alpha.1",
-    "react-dom": "^15.0.0-rc.1",
+    "react-addons-pure-render-mixin": "^0.14.7",
+    "react-dom": "^15.0.0-rc.2",
     "react-mixin": "^2.0.2",
-    "react-router": "^2.0.0-rc5"
+    "react-router": "^2.0.0-rc5",
+    "react-router-ssr": "^1.2.0"
   }
 }
