--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "babel": "^6.5.1",
+    "halogen": "^0.2.0",
     "history": "^2.0.0-rc2",
     "jquery": "^2.2.3",
     "material-ui": "^0.14.4",
