--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "template-meteor-react",
   "version": "1.0.0",
-  "description": "",
+  "description": "A template App using Meteor 1.3, React, React-Router with page transitions.",
   "main": "m135r2.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,7 +13,6 @@
     "babel": "^6.5.1",
     "halogen": "^0.2.0",
     "history": "^2.0.0-rc2",
-    "jquery": "^2.2.3",
     "lodash.range": "^3.1.4",
     "material-ui": "^0.14.4",
     "react": "^0.14.7",
@@ -22,7 +21,6 @@
     "react-dom": "^15.0.0-rc.2",
     "react-mixin": "^2.0.2",
     "react-motion": "^0.4.2",
-    "react-router": "^2.0.0-rc5",
-    "react-router-ssr": "^1.2.0"
+    "react-router": "^2.0.0-rc5"
   }
 }
