--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^15.0.1",
     "react-mixin": "^2.0.2",
     "react-motion": "^0.4.2",
-    "react-router": "^2.4.0"
+    "react-router": "^2.4.0",
+    "react-tap-event-plugin": "^1.0.0"
   }
 }
