--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lodash.range": "^3.1.4",
     "material-ui": "^0.15.0-beta.2",
     "react": "^15.0.1",
+    "react-addons-clone-with-props": "^0.14.8",
     "react-addons-css-transition-group": "^15.0.1",
     "react-addons-pure-render-mixin": "^15.0.1",
     "react-dom": "^15.0.1",
