--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "halogen": "^0.2.0",
     "history": "^2.0.0",
     "lodash.range": "^3.1.4",
-    "material-ui": "^0.15.0-beta.2",
-    "react": "^15.0.1",
+    "material-ui": "^0.16.3",
+    "react": "^15.4.2",
     "react-addons-css-transition-group": "^15.0.1",
     "react-addons-pure-render-mixin": "^15.0.1",
-    "react-dom": "^15.0.1",
+    "react-dom": "^15.4.2",
     "react-mixin": "^2.0.2",
     "react-motion": "^0.4.2",
     "react-router": "^2.4.0",
-    "react-tap-event-plugin": "^1.0.0"
+    "react-tap-event-plugin": "^2.0.1"
   }
 }
